# log4cxx-feedstock

./: .recipe_maintainers.json  README.md  conda-forge.yml
.ci_support/: linux_.yaml  linux_64_.yaml  linux_aarch64_.yaml  linux_ppc64le_.yaml  osx_.yaml  osx_64_.yaml  osx_arm64_.yaml  win_.yaml  win_64_.yaml  win_c_compilervs2015cxx_compilervs2015vc14.yaml
.github/: CODEOWNERS
recipe/: 001-fix-osx-segfault.patch  002-fix-osx.patch  bld.bat  build.sh  meta.yaml  msvc.patch
recipe/recipe/: CMakeLists.txt  bld.bat  meta.yaml
